--- a/style.css
+++ b/style.css
@@ -85,11 +85,12 @@ nav .link {
 
 main {
     flex: 2;
-    /* flex-grow: 1; */
+    flex-grow: 1;
     flex-shrink: 0;
     margin-top: 100px;
     top: 0px;
-    height: 100%;
+    height: auto;
+    max-height: 200vh;
     padding: 0px 20px;
 
     display: flex;
@@ -129,7 +130,7 @@ h2 {
     color: #a31420;
     font-family: "Pink Chicken";
     font-size: 30px;
-    margin: 0;
+    margin: 10px 0 0 0;
 }
 
 h4 {
@@ -140,8 +141,8 @@ h4 {
 }
 
 footer {
-    flex: 0 100px;
-    bottom: 0;
+    flex: 0 200px;
+    /* bottom: 0; */
     background-color: black;
     color: white;
 
